fix chatbot overflow issue

--- a/styles/MainChat.css
+++ b/styles/MainChat.css
@@ -254,7 +254,7 @@ button.message-visitor-email-button {
   background: white;
   border-radius: var(--radius);
   box-shadow: rgb(0 18 46 / 16%) 0px 8px 36px 0px;
-  height: 480px;
+  height: 0px;
   width: 372px;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
@@ -3343,7 +3343,7 @@ section.dashboard-section {
   height: 50px;
   padding: 0px 15px;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
   user-select: none;
 }
 .faq-item.active .faq-title {
